UI implementation fixes and refactoring of service
